[package]
name = "rrclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
crossterm = "0.26.0"
log = "0.4.17"
mountpoints = "0.2.1"
rand = "0.8.5"
serde_json = "1.0.93"
tui = "0.19.0"
tui-logger = "0.8.1"
